feat: add starting layout and javascript API implementation

--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,10 @@
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <h1 class="text-custom-primary">Hello World</h1>
+    <div class="flex justify-center items-center">
+      <img alt="Dicoding Pokemon Title" src="./assets/poke-text.png" />
     </div>
-    <h2>Hello World</h2>
-    <h3>Hello World</h3>
-    <h4>Hello World</h4>
-    <h5>Hello World</h5>
-    <h6>Hello World</h6>
-    <p>Hello World</p>
+
+    <section id="poke-grid"></section>
   </body>
 </html>
