feat: create custom-element

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="flex justify-center items-center">
+    <div class="flex justify-center items-center mb-20px">
       <img alt="Dicoding Pokemon Title" src="./assets/poke-text.png" />
     </div>
 
