feat: done project

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,16 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="flex justify-center items-center mb-20px">
-      <img alt="Dicoding Pokemon Title" src="./assets/poke-text.png" />
+    <div class="flex justify-center items-center">
+      <img
+        class="my-20px"
+        alt="Dicoding Pokemon Title"
+        src="./assets/poke-text.png" />
     </div>
 
+    <div id="loader"></div>
+
     <section id="poke-grid"></section>
+    <div id="pagination" class="mb-30px"></div>
   </body>
 </html>
